# linked-trust-impact-eval

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  jhri.json  mydb
bacalhauC/: Cargo.toml  README.md  bacalhau_compute.wasm
bacalhauC/jsons/: claim.json  claim2.json
baclahauC/: Cargo.toml  bacalhau_compute.wasm  jobID.txt  jobID.txtA  jobID.txtls
baclahauC/job-80c5ca9b/combined_results/outputs/: root.json
baclahauC/job-80c5ca9b/raw/QmXVqUkYoMhzyZiV5TgDkc5Sf2ruGKJRQ5F4nJFhfPQ2Ks/outputs/: tree.json
baclahauC/jsons/: claim.json  jsonCIDs.txt  test1.json  test2.json  test3.json
baclahauC/jsons/inputs/: claims.json
baclahauC/outputs/: root.json  treehashed.json
baclahauC/src/: main.rs
composedb/: .gitignore
composedb/app/: db.py  main.py  requirements.txt
contracts/: .README.md.swp  README.md  addresses.txt
contracts/cache/: solidity-files-cache.json
contracts/script/: MerkleSHA256.s.sol  RealityMock.s.sol  TestERC20.s.sol  Wrapper.s.sol
contracts/src/: IWrapper.sol  MerkleSHA256.sol  Wrapper.sol
contracts/test/: MerkleSHA256.t.sol  RealityMock.t.sol  TestERC20.t.sol  Wrapper.t.sol
doc/: ImpactEvaluatorsGrant.pptx
server/: README.md  bacalhau.sh  bacalhau_compute.wasm  jobID.txt  package-lock.json  package.json
task/: .env  .gitignore  Dockerfile  INSTALL.md  README.md  claim-composite-runtime.json  claim-composite.json  ie-claim-composite-runtime.json  ie-claim-composite.json  linked-claim-composite-runtime.json  linked-claim-composite.json  package-lock.json  package.json  tsconfig.json
template/: README-template.md
(+64 files in other folders)
