[package]
name = "bacalhau_compute"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
ethabi = "18.0.0"
sha256 = "1.1.1"
sha2 ="0.10.6"
hex = " 0.4.3"
